--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif; margin: 0%;
 }
 h1{
     font-size: 50px;
@@ -9,6 +9,7 @@ h1{
 }
 section{
     display: flex;
+    margin-top: 150px;
 }
 .half-width{
     width: 50%;
@@ -29,5 +30,21 @@ section{
 }
 .top-banner{
     background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+h2{
+    font-size: 45px;
+}
+.download-button{
+    text-decoration: none;
+    background-image: linear-gradient(orange , tomato);
+    padding: 10px 40px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+   
+}
+.dream-section{
+    background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
 }
