--- a/style.css
+++ b/style.css
@@ -60,12 +60,20 @@ h2{
     
     box-shadow: 10px 10px 30px 10px grey;
     border-radius: 2px;
-    border-left: 7px solid orangered;
-
+   
+    
 }
 .experience-section{
     background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
     background-position: left;
-    margin-bottom: 50px;
+    margin-bottom: 150px;
+}
+#orange-border{
+    border-left: 7px solid orangered;
+
+}
+#blue-border{
+    border-left: 7px solid blue;
+
 }
